--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -43,7 +43,14 @@ platformdirs==3.11.0
 pre-commit==3.5.0
     # via -r requirements.dev.in
 pylint==3.0.2
+    # via
+    #   -r requirements.dev.in
+    #   pylint-django
+    #   pylint-plugin-utils
+pylint-django==2.5.5
     # via -r requirements.dev.in
+pylint-plugin-utils==0.8.2
+    # via pylint-django
 pyproject-hooks==1.0.0
     # via build
 python-dateutil==2.8.2
