--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,5 +23,5 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.dev.txt
-          python -m pip install -e .
+          pip install -r requirements.txt
       - run: pre-commit run --verbose --all-files
