add pages as Django command

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ exclude: |
         core/|
         migrations/|
         manage.py|
+        management/commands/|
         __about__.py
     )
 repos:
