--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,23 @@
 #
 asgiref==3.7.2
     # via django
+beautifulsoup4==4.12.2
+    # via deep-translator
+certifi==2023.11.17
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
+deep-translator==1.11.4
+    # via -r requirements.in
 django==4.2.7
     # via -r requirements.in
+idna==3.6
+    # via requests
+requests==2.31.0
+    # via deep-translator
+soupsieve==2.5
+    # via beautifulsoup4
 sqlparse==0.4.4
     # via django
+urllib3==2.1.0
+    # via requests
