--- a/requirements.txt
+++ b/requirements.txt
@@ -10,16 +10,41 @@ beautifulsoup4==4.12.2
     # via deep-translator
 certifi==2023.11.17
     # via requests
+cffi==1.16.0
+    # via cryptography
 charset-normalizer==3.3.2
     # via requests
+cryptography==41.0.7
+    # via pyjwt
 deep-translator==1.11.4
     # via -r requirements.in
-django==4.2.7
+defusedxml==0.7.1
+    # via python3-openid
+django==4.2.8
+    # via
+    #   -r requirements.in
+    #   django-allauth
+django-allauth==0.58.2
     # via -r requirements.in
 idna==3.6
     # via requests
+oauthlib==3.2.2
+    # via requests-oauthlib
+pycparser==2.21
+    # via cffi
+pyjwt[crypto]==2.8.0
+    # via
+    #   django-allauth
+    #   pyjwt
+python3-openid==3.2.0
+    # via django-allauth
 requests==2.31.0
-    # via deep-translator
+    # via
+    #   deep-translator
+    #   django-allauth
+    #   requests-oauthlib
+requests-oauthlib==1.3.1
+    # via django-allauth
 soupsieve==2.5
     # via beautifulsoup4
 sqlparse==0.4.4
