--- a/requirements.txt
+++ b/requirements.txt
@@ -20,11 +20,13 @@ deep-translator==1.11.4
     # via -r requirements.in
 defusedxml==0.7.1
     # via python3-openid
-django==4.2.8
+django==5.0
     # via
     #   -r requirements.in
     #   django-allauth
 django-allauth==0.58.2
+    # via -r requirements.in
+django-widget-tweaks==1.5.0
     # via -r requirements.in
 idna==3.6
     # via requests
