--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -20,8 +20,10 @@ faker==20.1.0
     # via -r requirements.dev.in
 filelock==3.13.1
     # via virtualenv
-identify==2.5.32
+identify==2.5.33
     # via pre-commit
+iniconfig==2.0.0
+    # via pytest
 isort==5.12.0
     # via pylint
 mccabe==0.7.0
@@ -33,13 +35,17 @@ mypy-extensions==1.0.0
 nodeenv==1.8.0
     # via pre-commit
 packaging==23.2
-    # via build
+    # via
+    #   build
+    #   pytest
 pip-tools==7.3.0
     # via -r requirements.dev.in
 platformdirs==4.1.0
     # via
     #   pylint
     #   virtualenv
+pluggy==1.3.0
+    # via pytest
 pre-commit==3.5.0
     # via -r requirements.dev.in
 pylint==3.0.2
@@ -53,6 +59,8 @@ pylint-plugin-utils==0.8.2
     # via pylint-django
 pyproject-hooks==1.0.0
     # via build
+pytest==7.4.3
+    # via -r requirements.dev.in
 python-dateutil==2.8.2
     # via faker
 pyyaml==6.0.1
