--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.dev.txt
-        python -m pip install -e .
+        pip install -r requirements.txt
     - name: Test with pytest
       run: |
         python -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src tests/
