--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -8,20 +8,35 @@ astroid==3.0.1
     # via pylint
 build==1.0.3
     # via pip-tools
+certifi==2023.11.17
+    # via requests
 cfgv==3.4.0
     # via pre-commit
+charset-normalizer==3.3.2
+    # via requests
 click==8.1.7
     # via pip-tools
+coverage[toml]==6.5.0
+    # via
+    #   coverage
+    #   coveralls
+    #   pytest-cov
+coveralls==3.3.1
+    # via -r requirements.dev.in
 dill==0.3.7
     # via pylint
 distlib==0.3.7
     # via virtualenv
+docopt==0.6.2
+    # via coveralls
 faker==20.1.0
     # via -r requirements.dev.in
 filelock==3.13.1
     # via virtualenv
 identify==2.5.33
     # via pre-commit
+idna==3.6
+    # via requests
 iniconfig==2.0.0
     # via pytest
 isort==5.12.0
@@ -60,17 +75,25 @@ pylint-plugin-utils==0.8.2
 pyproject-hooks==1.0.0
     # via build
 pytest==7.4.3
+    # via
+    #   -r requirements.dev.in
+    #   pytest-cov
+pytest-cov==4.1.0
     # via -r requirements.dev.in
 python-dateutil==2.8.2
     # via faker
 pyyaml==6.0.1
     # via pre-commit
+requests==2.31.0
+    # via coveralls
 six==1.16.0
     # via python-dateutil
 tomlkit==0.12.3
     # via pylint
 typing-extensions==4.8.0
     # via mypy
+urllib3==2.1.0
+    # via requests
 virtualenv==20.25.0
     # via pre-commit
 wheel==0.42.0
