--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        python -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src tests/
+        python -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=lexiflux tests/
 
     - name: Upload coverage data to coveralls.io
       if: ${{ matrix.python-version == 3.11 && matrix.platform == 'ubuntu-latest' }}
