--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 #
 # To get coverage budge in README.md, register you project on https://coveralls.io/repos/new
-name: Test
+name: CI
 
 on:
   push:
