--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,12 @@ django-allauth==0.58.2
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
+ebooklib==0.18
+    # via -r requirements.in
 idna==3.6
     # via requests
+lxml==4.9.3
+    # via ebooklib
 oauthlib==3.2.2
     # via requests-oauthlib
 pycparser==2.21
@@ -47,6 +51,8 @@ requests==2.31.0
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
+six==1.16.0
+    # via ebooklib
 soupsieve==2.5
     # via beautifulsoup4
 sqlparse==0.4.4
