--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.dev.in
 #
-astroid==3.0.1
+astroid==3.0.2
     # via pylint
 build==1.0.3
     # via pip-tools
@@ -25,11 +25,11 @@ coveralls==3.3.1
     # via -r requirements.dev.in
 dill==0.3.7
     # via pylint
-distlib==0.3.7
+distlib==0.3.8
     # via virtualenv
 docopt==0.6.2
     # via coveralls
-faker==20.1.0
+faker==21.0.0
     # via -r requirements.dev.in
 filelock==3.13.1
     # via virtualenv
@@ -39,7 +39,7 @@ idna==3.6
     # via requests
 iniconfig==2.0.0
     # via pytest
-isort==5.13.1
+isort==5.13.2
     # via pylint
 mccabe==0.7.0
     # via pylint
@@ -78,7 +78,10 @@ pytest==7.4.3
     # via
     #   -r requirements.dev.in
     #   pytest-cov
+    #   pytest-django
 pytest-cov==4.1.0
+    # via -r requirements.dev.in
+pytest-django==4.7.0
     # via -r requirements.dev.in
 python-dateutil==2.8.2
     # via faker
