--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^23.0.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
@@ -20,6 +21,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "node-fetch": "^3.3.2",
     "terser-webpack-plugin": "^5.3.10"
   }
 }
