--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,11 +15,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      PRIMARY_PYTHON_VERSION: '3.12'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.11'
+          python-version: PRIMARY_PYTHON_VERSION
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.dev.txt
