--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,18 +44,18 @@ jobs:
         python -m pytest -vv --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=lexiflux tests/
 
     - name: Upload coverage data to coveralls.io
-      if: ${{ matrix.python-version == PRIMARY_PYTHON_VERSION && matrix.platform == PRIMARY_PLATFORM }}
+      if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION && matrix.platform == env.PRIMARY_PLATFORM }}
       run: coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Coverage to Codecov
-      if: ${{ matrix.python-version == PRIMARY_PYTHON_VERSION && matrix.platform == PRIMARY_PLATFORM }}
+      if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION && matrix.platform == env.PRIMARY_PLATFORM }}
       uses: codecov/codecov-action@v2
 
     - name: Coverage comment
       id: coverage_comment
-      if: ${{ matrix.python-version == PRIMARY_PYTHON_VERSION && matrix.platform == PRIMARY_PLATFORM }}
+      if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION && matrix.platform == env.PRIMARY_PLATFORM }}
       uses: py-cov-action/python-coverage-comment-action@v3
       with:
         GITHUB_TOKEN: ${{ github.token }}
