--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: PRIMARY_PYTHON_VERSION
+          python-version: ${{ env.PRIMARY_PYTHON_VERSION  }}
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.dev.txt
