--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     env:
+      PYTEST_CMD: >
+        python -m pytest 
+        -vv 
+        --junitxml=pytest.xml 
+        --cov-report=term-missing:skip-covered 
+        --cov=lexiflux 
+        tests/
       PRIMARY_PYTHON_VERSION: '3.12'
       PRIMARY_PLATFORM: 'ubuntu-latest'
     permissions:
@@ -32,22 +39,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install uv environment
+      uses: andgineer/uv-venv@v1
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.dev.txt
+      run: uv pip install -r requirements.dev.txt
     - name: Test with pytest
-      run: |
-        python -m pytest -vv --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=lexiflux tests/
+      run: ${{ env.PYTEST_CMD }}
 
     - name: Upload coverage data to coveralls.io
       if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION && matrix.platform == env.PRIMARY_PLATFORM }}
-      run: coveralls --service=github
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: coverallsapp/github-action@v2
 
     - name: Upload Coverage to Codecov
       if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION && matrix.platform == env.PRIMARY_PLATFORM }}
