--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,8 +22,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ env.PRIMARY_PYTHON_VERSION  }}
+      - uses: andgineer/uv-venv@v1
       - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.dev.txt
-          pip install -r requirements.txt
-      - run: pre-commit run --verbose --all-files
+          uv pip install pip -r requirements.dev.txt
+          pre-commit run --verbose --all-files
