--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
   hub:
     image: seleniarm/hub
     container_name: hub
-    ports:
-      - "4442:4442"
-      - "4443:4443"
-      - "4444:4444"
+#    ports:
+#      - "4442:4442"
+#      - "4443:4443"
+#      - "4444:4444"
     network_mode: "host"  # to access localhost with django test server
