--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,13 @@ jobs:
       uses: andgineer/uv-venv@v1
     - name: Install dependencies
       run: uv pip install -r requirements.dev.txt
+
+    - name: Start SeleniumHub
+      run: |
+        mkdir -p allure-results
+        docker-compose up -d
+        scripts/wait_selenium.sh
+
     - name: Test with pytest and Allure report
       run: "${{ env.PYTEST_CMD }} --alluredir=./allure-results"
 
