do not use host network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - SE_EVENT_BUS_HOST=hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    network_mode: "host"  # to access localhost with django test server
+#    network_mode: "host"  # to access localhost with django test server
 
 #  edge:
 #    image: selenium/node-edge:4.8.3-20230404
@@ -38,13 +38,13 @@ services:
       - SE_EVENT_BUS_HOST=hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    network_mode: "host"  # to access localhost with django test server
+#    network_mode: "host"  # to access localhost with django test server
 
   hub:
     image: seleniarm/hub
     container_name: hub
-#    ports:
-#      - "4442:4442"
-#      - "4443:4443"
-#      - "4444:4444"
-    network_mode: "host"  # to access localhost with django test server
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
+#    network_mode: "host"  # to access localhost with django test server
