--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = core.settings
+DJANGO_SETTINGS_MODULE = tests.django_settings
+DJANGO_LIVE_TEST_SERVER_ADDRESS = 0.0.0.0
+
 log_cli = true
 ;log_cli_level = DEBUG
 markers =
