added Selenium MS Edge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,17 +17,16 @@ services:
       - SE_EVENT_BUS_HOST=hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-#    network_mode: "host"  # to access localhost with django test server
 
-#  edge:
-#    image: selenium/node-edge:4.8.3-20230404
-#    shm_size: 2gb
-#    depends_on:
-#      - hub
-#    environment:
-#      - SE_EVENT_BUS_HOST=hub
-#      - SE_EVENT_BUS_PUBLISH_PORT=4442
-#      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+  edge:
+    image: selenium/node-edge:4.8.3-20230404
+    shm_size: 2gb
+    depends_on:
+      - hub
+    environment:
+      - SE_EVENT_BUS_HOST=hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
 
   firefox:
     image: seleniarm/node-firefox
@@ -38,7 +37,6 @@ services:
       - SE_EVENT_BUS_HOST=hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-#    network_mode: "host"  # to access localhost with django test server
 
   hub:
     image: seleniarm/hub
@@ -46,4 +44,3 @@ services:
       - "4442:4442"
       - "4443:4443"
       - "4444:4444"
-#    network_mode: "host"  # to access localhost with django test server
