--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@babel/preset-env": "^7.23.5",
     "@testing-library/jest-dom": "^6.1.5",
     "@types/jest": "^29.5.10",
+    "allure-jest": "^2.15.1",
+    "allure-js-commons": "^2.15.1",
     "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
