--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -3,6 +3,8 @@
 allure-pytest==2.13.5
 allure-python-commons==2.13.5
     # via allure-pytest
+annotated-types==0.7.0
+    # via pydantic
 asgiref==3.7.2
     # via django
 astroid==3.0.2
@@ -87,6 +89,9 @@ pluggy==1.3.0
 pre-commit==3.6.0
 pycparser==2.21
     # via cffi
+pydantic==2.7.4
+pydantic-core==2.18.4
+    # via pydantic
 pyjwt==2.8.0
     # via django-allauth
 pylint==3.0.3
@@ -144,9 +149,11 @@ trio==0.25.0
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-typing-extensions==4.9.0
+typing-extensions==4.12.2
     # via
     #   mypy
+    #   pydantic
+    #   pydantic-core
     #   selenium
 urllib3==2.1.0
     # via
