--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -48,6 +48,13 @@ beautifulsoup4==4.12.2
     #   nbconvert
 bleach==6.1.0
     # via nbconvert
+blis==0.7.11
+    # via thinc
+catalogue==2.0.10
+    # via
+    #   spacy
+    #   srsly
+    #   thinc
 certifi==2023.11.17
     # via
     #   httpcore
@@ -63,8 +70,18 @@ cfgv==3.4.0
 chardet==5.2.0
 charset-normalizer==3.3.2
     # via requests
+click==8.1.7
+    # via
+    #   nltk
+    #   typer
+cloudpathlib==0.18.1
+    # via weasel
 comm==0.2.2
     # via ipykernel
+confection==0.1.5
+    # via
+    #   thinc
+    #   weasel
 coverage==6.5.0
     # via
     #   coveralls
@@ -72,6 +89,11 @@ coverage==6.5.0
 coveralls==3.3.1
 cryptography==41.0.7
     # via pyjwt
+cymem==2.0.8
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
 debugpy==1.8.1
@@ -148,6 +170,9 @@ jinja2==3.1.4
     #   jupyterlab
     #   jupyterlab-server
     #   nbconvert
+    #   spacy
+joblib==1.4.2
+    # via nltk
 json5==0.9.25
     # via jupyterlab-server
 jsonpatch==1.33
@@ -210,13 +235,21 @@ langchain-core==0.2.9
 langchain-openai==0.1.9
 langchain-text-splitters==0.2.1
     # via langchain
+langcodes==3.4.0
+    # via spacy
 langsmith==0.1.81
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
+language-data==1.2.0
+    # via langcodes
 lxml==5.0.0
     # via ebooklib
+marisa-trie==1.2.0
+    # via language-data
+markdown-it-py==3.0.0
+    # via rich
 markupsafe==2.1.5
     # via
     #   jinja2
@@ -229,12 +262,19 @@ matplotlib-inline==0.1.7
     #   ipython
 mccabe==0.7.0
     # via pylint
+mdurl==0.1.2
+    # via markdown-it-py
 mistune==3.0.2
     # via nbconvert
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
+murmurhash==1.0.10
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 mypy==1.8.0
 mypy-extensions==1.0.0
     # via
@@ -251,6 +291,7 @@ nbformat==5.10.4
     #   nbconvert
 nest-asyncio==1.6.0
     # via ipykernel
+nltk==3.8.1
 nodeenv==1.8.0
     # via pre-commit
 notebook==7.2.1
@@ -260,8 +301,11 @@ notebook-shim==0.2.4
     #   notebook
 numpy==1.26.4
     # via
+    #   blis
     #   langchain
     #   langchain-community
+    #   spacy
+    #   thinc
 oauthlib==3.2.2
     # via requests-oauthlib
 ollama==0.2.1
@@ -283,6 +327,9 @@ packaging==24.1
     #   marshmallow
     #   nbconvert
     #   pytest
+    #   spacy
+    #   thinc
+    #   weasel
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
@@ -299,6 +346,10 @@ pluggy==1.3.0
     #   allure-python-commons
     #   pytest
 pre-commit==3.6.0
+preshed==3.0.9
+    # via
+    #   spacy
+    #   thinc
 prometheus-client==0.20.0
     # via jupyter-server
 prompt-toolkit==3.0.47
@@ -315,16 +366,21 @@ pycparser==2.21
     # via cffi
 pydantic==2.7.4
     # via
+    #   confection
     #   langchain
     #   langchain-core
     #   langsmith
     #   openai
+    #   spacy
+    #   thinc
+    #   weasel
 pydantic-core==2.18.4
     # via pydantic
 pygments==2.18.0
     # via
     #   ipython
     #   nbconvert
+    #   rich
 pyjwt==2.8.0
     # via django-allauth
 pylint==3.0.3
@@ -370,7 +426,9 @@ referencing==0.35.1
     #   jsonschema-specifications
     #   jupyter-events
 regex==2024.5.15
-    # via tiktoken
+    # via
+    #   nltk
+    #   tiktoken
 requests==2.31.0
     # via
     #   coveralls
@@ -381,7 +439,9 @@ requests==2.31.0
     #   langchain-community
     #   langsmith
     #   requests-oauthlib
+    #   spacy
     #   tiktoken
+    #   weasel
 requests-oauthlib==1.3.1
     # via django-allauth
 rfc3339-validator==0.1.4
@@ -392,6 +452,8 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
+rich==13.7.1
+    # via typer
 rpds-py==0.18.1
     # via
     #   jsonschema
@@ -399,10 +461,15 @@ rpds-py==0.18.1
 selenium==4.20.0
 send2trash==1.8.3
     # via jupyter-server
-setuptools==69.1.0
+setuptools==70.2.0
     # via
     #   jupyterlab
+    #   marisa-trie
     #   nodeenv
+    #   spacy
+    #   thinc
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   asttokens
@@ -411,6 +478,8 @@ six==1.16.0
     #   python-dateutil
     #   rfc3339-validator
     #   transliterate
+smart-open==7.0.4
+    # via weasel
 sniffio==1.3.1
     # via
     #   anyio
@@ -421,12 +490,23 @@ sortedcontainers==2.4.0
     # via trio
 soupsieve==2.5
     # via beautifulsoup4
+spacy==3.7.5
+spacy-legacy==3.0.12
+    # via spacy
+spacy-loggers==1.0.5
+    # via spacy
 sqlalchemy==2.0.31
     # via
     #   langchain
     #   langchain-community
 sqlparse==0.4.4
     # via django
+srsly==2.4.8
+    # via
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
 stack-data==0.6.3
     # via ipython
 tenacity==8.4.1
@@ -438,6 +518,8 @@ terminado==0.18.1
     # via
     #   jupyter-server
     #   jupyter-server-terminals
+thinc==8.2.5
+    # via spacy
 tiktoken==0.7.0
     # via langchain-openai
 tinycss2==1.3.0
@@ -453,7 +535,10 @@ tornado==6.4.1
     #   notebook
     #   terminado
 tqdm==4.66.4
-    # via openai
+    # via
+    #   nltk
+    #   openai
+    #   spacy
 traitlets==5.14.3
     # via
     #   comm
@@ -475,6 +560,10 @@ trio==0.25.0
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
+typer==0.12.3
+    # via
+    #   spacy
+    #   weasel
 types-python-dateutil==2.9.0.20240316
     # via arrow
 typing-extensions==4.12.2
@@ -485,6 +574,7 @@ typing-extensions==4.12.2
     #   pydantic-core
     #   selenium
     #   sqlalchemy
+    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
@@ -496,8 +586,15 @@ urllib3==2.1.0
     #   selenium
 virtualenv==20.25.0
     # via pre-commit
+wasabi==1.1.3
+    # via
+    #   spacy
+    #   thinc
+    #   weasel
 wcwidth==0.2.13
     # via prompt-toolkit
+weasel==0.4.1
+    # via spacy
 webcolors==24.6.0
     # via jsonschema
 webencodings==0.5.1
@@ -506,6 +603,8 @@ webencodings==0.5.1
     #   tinycss2
 websocket-client==1.8.0
     # via jupyter-server
+wrapt==1.16.0
+    # via smart-open
 wsproto==1.2.0
     # via trio-websocket
 yarl==1.9.4
