--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
 # because use functools.lru_cache for methods
-python_version >= "3.8"
+# python_version>=3.8
 django
 django-allauth
 deep-translator
