--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,13 @@ attrs==23.2.0
     # via aiohttp
 beautifulsoup4==4.12.2
     # via deep-translator
+blis==0.7.11
+    # via thinc
+catalogue==2.0.10
+    # via
+    #   spacy
+    #   srsly
+    #   thinc
 certifi==2023.11.17
     # via
     #   httpcore
@@ -28,8 +35,23 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
     # via requests
+click==8.1.7
+    # via
+    #   nltk
+    #   typer
+cloudpathlib==0.18.1
+    # via weasel
+confection==0.1.5
+    # via
+    #   thinc
+    #   weasel
 cryptography==41.0.7
     # via pyjwt
+cymem==2.0.8
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 dataclasses-json==0.6.7
     # via langchain-community
 deep-translator==1.11.4
@@ -60,6 +82,10 @@ idna==3.6
     #   httpx
     #   requests
     #   yarl
+jinja2==3.1.4
+    # via spacy
+joblib==1.4.2
+    # via nltk
 jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
@@ -76,25 +102,46 @@ langchain-core==0.2.9
 langchain-openai==0.1.9
 langchain-text-splitters==0.2.1
     # via langchain
+langcodes==3.4.0
+    # via spacy
 langsmith==0.1.81
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
+language-data==1.2.0
+    # via langcodes
 lxml==5.0.0
     # via ebooklib
+marisa-trie==1.2.0
+    # via language-data
+markdown-it-py==3.0.0
+    # via rich
+markupsafe==2.1.5
+    # via jinja2
 marshmallow==3.21.3
     # via dataclasses-json
+mdurl==0.1.2
+    # via markdown-it-py
 multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
+murmurhash==1.0.10
+    # via
+    #   preshed
+    #   spacy
+    #   thinc
 mypy-extensions==1.0.0
     # via typing-inspect
+nltk==3.8.1
 numpy==1.26.4
     # via
+    #   blis
     #   langchain
     #   langchain-community
+    #   spacy
+    #   thinc
 oauthlib==3.2.2
     # via requests-oauthlib
 ollama==0.2.1
@@ -106,16 +153,29 @@ packaging==24.1
     # via
     #   langchain-core
     #   marshmallow
+    #   spacy
+    #   thinc
+    #   weasel
+preshed==3.0.9
+    # via
+    #   spacy
+    #   thinc
 pycparser==2.21
     # via cffi
 pydantic==2.7.4
     # via
+    #   confection
     #   langchain
     #   langchain-core
     #   langsmith
     #   openai
+    #   spacy
+    #   thinc
+    #   weasel
 pydantic-core==2.18.4
     # via pydantic
+pygments==2.18.0
+    # via rich
 pyjwt==2.8.0
     # via django-allauth
 python3-openid==3.2.0
@@ -126,7 +186,9 @@ pyyaml==6.0.1
     #   langchain-community
     #   langchain-core
 regex==2024.5.15
-    # via tiktoken
+    # via
+    #   nltk
+    #   tiktoken
 requests==2.31.0
     # via
     #   deep-translator
@@ -135,13 +197,26 @@ requests==2.31.0
     #   langchain-community
     #   langsmith
     #   requests-oauthlib
+    #   spacy
     #   tiktoken
+    #   weasel
 requests-oauthlib==1.3.1
     # via django-allauth
+rich==13.7.1
+    # via typer
+setuptools==70.2.0
+    # via
+    #   marisa-trie
+    #   spacy
+    #   thinc
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   ebooklib
     #   transliterate
+smart-open==7.0.4
+    # via weasel
 sniffio==1.3.1
     # via
     #   anyio
@@ -149,32 +224,62 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.5
     # via beautifulsoup4
+spacy==3.7.5
+spacy-legacy==3.0.12
+    # via spacy
+spacy-loggers==1.0.5
+    # via spacy
 sqlalchemy==2.0.31
     # via
     #   langchain
     #   langchain-community
 sqlparse==0.4.4
     # via django
+srsly==2.4.8
+    # via
+    #   confection
+    #   spacy
+    #   thinc
+    #   weasel
 tenacity==8.4.1
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
+thinc==8.2.5
+    # via spacy
 tiktoken==0.7.0
     # via langchain-openai
 tqdm==4.66.4
-    # via openai
+    # via
+    #   nltk
+    #   openai
+    #   spacy
 transliterate==1.10.2
+typer==0.12.3
+    # via
+    #   spacy
+    #   weasel
 typing-extensions==4.12.2
     # via
     #   openai
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+    #   typer
     #   typing-inspect
 typing-inspect==0.9.0
     # via dataclasses-json
 urllib3==2.1.0
     # via requests
+wasabi==1.1.3
+    # via
+    #   spacy
+    #   thinc
+    #   weasel
+weasel==0.4.1
+    # via spacy
+wrapt==1.16.0
+    # via smart-open
 yarl==1.9.4
     # via aiohttp
