integrated Lexical articles with notebook and with Django view

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ exclude: |
         tests/|
         docs/|
         core/migrations/|
-        venv/|
+        .venv/|
         migrations/|
         manage.py|
         __about__.py
