set DJANGO_SETTINGS_MODULE

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -13,10 +13,11 @@ on:
       - main
       - master
 jobs:
-  deploy:
+  static:
     runs-on: ubuntu-latest
     env:
       PRIMARY_PYTHON_VERSION: '3.12'
+      DJANGO_SETTINGS_MODULE: 'core.settings'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
