remove allure screenshot in test teardown

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = tests.django_settings
 
-log_cli = true
+; log_cli = true
 ;log_cli_level = DEBUG
 markers =
     docker: requires docker
