--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,19 +2,28 @@
 #    uv pip compile requirements.dev.in --output-file=requirements.dev.txt
 aiohttp==3.9.5
     # via
+    #   -r requirements.txt
     #   langchain
     #   langchain-community
 aiosignal==1.3.1
-    # via aiohttp
+    # via
+    #   -r requirements.txt
+    #   aiohttp
 allure-pytest==2.13.5
+    # via -r requirements.dev.in
 allure-python-commons==2.13.5
     # via allure-pytest
 annotated-types==0.7.0
-    # via pydantic
+    # via
+    #   -r requirements.txt
+    #   pydantic
 anthropic==0.30.1
-    # via langchain-anthropic
+    # via
+    #   -r requirements.txt
+    #   langchain-anthropic
 anyio==4.4.0
     # via
+    #   -r requirements.txt
     #   anthropic
     #   httpx
     #   jupyter-server
@@ -28,7 +37,9 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
     # via isoduration
 asgiref==3.7.2
-    # via django
+    # via
+    #   -r requirements.txt
+    #   django
 astroid==3.0.2
     # via pylint
 asttokens==2.4.1
@@ -37,6 +48,7 @@ async-lru==2.0.4
     # via jupyterlab
 attrs==23.2.0
     # via
+    #   -r requirements.txt
     #   aiohttp
     #   allure-python-commons
     #   jsonschema
@@ -47,29 +59,39 @@ babel==2.15.0
     # via jupyterlab-server
 beautifulsoup4==4.12.2
     # via
+    #   -r requirements.txt
     #   deep-translator
     #   nbconvert
 bleach==6.1.0
     # via nbconvert
 cachetools==5.3.3
-    # via google-auth
+    # via
+    #   -r requirements.txt
+    #   google-auth
 certifi==2023.11.17
     # via
+    #   -r requirements.txt
     #   httpcore
     #   httpx
     #   requests
     #   selenium
 cffi==1.16.0
     # via
+    #   -r requirements.txt
     #   argon2-cffi-bindings
     #   cryptography
 cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
+    # via -r requirements.txt
 charset-normalizer==3.3.2
-    # via requests
+    # via
+    #   -r requirements.txt
+    #   requests
 click==8.1.7
-    # via nltk
+    # via
+    #   -r requirements.txt
+    #   nltk
 comm==0.2.2
     # via ipykernel
 coverage==6.5.0
@@ -77,19 +99,25 @@ coverage==6.5.0
     #   coveralls
     #   pytest-cov
 coveralls==3.3.1
+    # via -r requirements.dev.in
 cryptography==41.0.7
     # via
+    #   -r requirements.txt
     #   pyjwt
     #   pyopenssl
 dataclasses-json==0.6.7
-    # via langchain-community
+    # via
+    #   -r requirements.txt
+    #   langchain-community
 debugpy==1.8.1
     # via ipykernel
 decorator==5.1.1
     # via ipython
 deep-translator==1.11.4
+    # via -r requirements.txt
 defusedxml==0.7.1
     # via
+    #   -r requirements.txt
     #   langchain-anthropic
     #   nbconvert
     #   python3-openid
@@ -99,91 +127,127 @@ distlib==0.3.8
     # via virtualenv
 distro==1.9.0
     # via
+    #   -r requirements.txt
     #   anthropic
     #   openai
 django==5.0
     # via
+    #   -r requirements.txt
     #   django-allauth
     #   django-extensions
 django-allauth==0.59.0
+    # via -r requirements.txt
 django-extensions==3.2.3
+    # via -r requirements.txt
 django-widget-tweaks==1.5.0
+    # via -r requirements.txt
 docopt==0.6.2
     # via coveralls
 ebooklib==0.18
+    # via -r requirements.txt
 executing==2.0.1
     # via stack-data
 faker==22.0.0
+    # via -r requirements.dev.in
 fastjsonschema==2.20.0
     # via nbformat
 fasttext==0.9.3
+    # via -r requirements.txt
 filelock==3.15.4
     # via
+    #   -r requirements.txt
     #   huggingface-hub
     #   virtualenv
 fqdn==1.5.1
     # via jsonschema
 frozenlist==1.4.1
     # via
+    #   -r requirements.txt
     #   aiohttp
     #   aiosignal
 fsspec==2024.6.1
-    # via huggingface-hub
+    # via
+    #   -r requirements.txt
+    #   huggingface-hub
 google-ai-generativelanguage==0.6.6
-    # via google-generativeai
+    # via
+    #   -r requirements.txt
+    #   google-generativeai
 google-api-core==2.19.1
     # via
+    #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
 google-api-python-client==2.136.0
-    # via google-generativeai
+    # via
+    #   -r requirements.txt
+    #   google-generativeai
 google-auth==2.31.0
     # via
+    #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
     #   google-api-python-client
     #   google-auth-httplib2
     #   google-generativeai
 google-auth-httplib2==0.2.0
-    # via google-api-python-client
+    # via
+    #   -r requirements.txt
+    #   google-api-python-client
 google-generativeai==0.7.1
-    # via langchain-google-genai
+    # via
+    #   -r requirements.txt
+    #   langchain-google-genai
 googleapis-common-protos==1.63.2
     # via
+    #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
 grpcio==1.64.1
     # via
+    #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
 grpcio-status==1.62.2
-    # via google-api-core
+    # via
+    #   -r requirements.txt
+    #   google-api-core
 h11==0.14.0
     # via
+    #   -r requirements.txt
     #   httpcore
     #   wsproto
 httpcore==1.0.5
-    # via httpx
+    # via
+    #   -r requirements.txt
+    #   httpx
 httplib2==0.22.0
     # via
+    #   -r requirements.txt
     #   google-api-python-client
     #   google-auth-httplib2
 httpx==0.27.0
     # via
+    #   -r requirements.txt
     #   anthropic
     #   jupyterlab
     #   langchain-mistralai
     #   ollama
     #   openai
 httpx-sse==0.4.0
-    # via langchain-mistralai
+    # via
+    #   -r requirements.txt
+    #   langchain-mistralai
 huggingface-hub==0.23.4
-    # via tokenizers
+    # via
+    #   -r requirements.txt
+    #   tokenizers
 identify==2.5.33
     # via pre-commit
 idna==3.6
     # via
+    #   -r requirements.txt
     #   anyio
     #   httpx
     #   jsonschema
@@ -209,15 +273,22 @@ jinja2==3.1.4
     #   jupyterlab-server
     #   nbconvert
 jiter==0.5.0
-    # via anthropic
+    # via
+    #   -r requirements.txt
+    #   anthropic
 joblib==1.4.2
-    # via nltk
+    # via
+    #   -r requirements.txt
+    #   nltk
 json5==0.9.25
     # via jupyterlab-server
 jsonpatch==1.33
-    # via langchain-core
+    # via
+    #   -r requirements.txt
+    #   langchain-core
 jsonpointer==3.0.0
     # via
+    #   -r requirements.txt
     #   jsonpatch
     #   jsonschema
 jsonschema==4.22.0
@@ -263,11 +334,16 @@ jupyterlab-server==2.27.2
     #   jupyterlab
     #   notebook
 langchain==0.2.5
-    # via langchain-community
+    # via
+    #   -r requirements.txt
+    #   langchain-community
 langchain-anthropic==0.1.15
+    # via -r requirements.txt
 langchain-community==0.2.5
+    # via -r requirements.txt
 langchain-core==0.2.9
     # via
+    #   -r requirements.txt
     #   langchain
     #   langchain-anthropic
     #   langchain-community
@@ -276,24 +352,35 @@ langchain-core==0.2.9
     #   langchain-openai
     #   langchain-text-splitters
 langchain-google-genai==1.0.7
+    # via -r requirements.txt
 langchain-mistralai==0.1.9
+    # via -r requirements.txt
 langchain-openai==0.1.9
+    # via -r requirements.txt
 langchain-text-splitters==0.2.1
-    # via langchain
+    # via
+    #   -r requirements.txt
+    #   langchain
 langsmith==0.1.81
     # via
+    #   -r requirements.txt
     #   langchain
     #   langchain-community
     #   langchain-core
 lxml==5.0.0
-    # via ebooklib
+    # via
+    #   -r requirements.txt
+    #   ebooklib
 markupsafe==2.1.5
     # via
+    #   -r requirements.txt
     #   jinja2
     #   nbconvert
     #   werkzeug
 marshmallow==3.21.3
-    # via dataclasses-json
+    # via
+    #   -r requirements.txt
+    #   dataclasses-json
 matplotlib-inline==0.1.7
     # via
     #   ipykernel
@@ -304,11 +391,14 @@ mistune==3.0.2
     # via nbconvert
 multidict==6.0.5
     # via
+    #   -r requirements.txt
     #   aiohttp
     #   yarl
 mypy==1.8.0
+    # via -r requirements.dev.in
 mypy-extensions==1.0.0
     # via
+    #   -r requirements.txt
     #   mypy
     #   typing-inspect
 nbclient==0.10.0
@@ -323,31 +413,42 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
     # via ipykernel
 nltk==3.8.1
+    # via -r requirements.txt
 nodeenv==1.8.0
     # via pre-commit
 notebook==7.2.1
+    # via -r requirements.dev.in
 notebook-shim==0.2.4
     # via
     #   jupyterlab
     #   notebook
 numpy==1.26.4
     # via
+    #   -r requirements.txt
     #   fasttext
     #   langchain
     #   langchain-community
 oauthlib==3.2.2
-    # via requests-oauthlib
+    # via
+    #   -r requirements.txt
+    #   requests-oauthlib
 ollama==0.2.1
+    # via -r requirements.txt
 openai==1.35.3
-    # via langchain-openai
+    # via
+    #   -r requirements.txt
+    #   langchain-openai
 orjson==3.10.5
-    # via langsmith
+    # via
+    #   -r requirements.txt
+    #   langsmith
 outcome==1.3.0.post0
     # via trio
 overrides==7.7.0
     # via jupyter-server
 packaging==24.1
     # via
+    #   -r requirements.txt
     #   huggingface-hub
     #   ipykernel
     #   jupyter-server
@@ -373,16 +474,19 @@ pluggy==1.3.0
     #   allure-python-commons
     #   pytest
 pre-commit==3.6.0
+    # via -r requirements.dev.in
 prometheus-client==0.20.0
     # via jupyter-server
 prompt-toolkit==3.0.47
     # via ipython
 proto-plus==1.24.0
     # via
+    #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
 protobuf==4.25.3
     # via
+    #   -r requirements.txt
     #   google-ai-generativelanguage
     #   google-api-core
     #   google-generativeai
@@ -399,16 +503,24 @@ pure-eval==0.2.2
     # via stack-data
 pyasn1==0.6.0
     # via
+    #   -r requirements.txt
     #   pyasn1-modules
     #   rsa
 pyasn1-modules==0.4.0
-    # via google-auth
+    # via
+    #   -r requirements.txt
+    #   google-auth
 pybind11==2.13.1
-    # via fasttext
+    # via
+    #   -r requirements.txt
+    #   fasttext
 pycparser==2.21
-    # via cffi
+    # via
+    #   -r requirements.txt
+    #   cffi
 pydantic==2.7.4
     # via
+    #   -r requirements.txt
     #   anthropic
     #   google-generativeai
     #   langchain
@@ -416,32 +528,44 @@ pydantic==2.7.4
     #   langsmith
     #   openai
 pydantic-core==2.18.4
-    # via pydantic
+    # via
+    #   -r requirements.txt
+    #   pydantic
 pygments==2.18.0
     # via
     #   ipython
     #   nbconvert
 pyjwt==2.8.0
-    # via django-allauth
+    # via
+    #   -r requirements.txt
+    #   django-allauth
 pylint==3.0.3
     # via
+    #   -r requirements.dev.in
     #   pylint-django
     #   pylint-plugin-utils
 pylint-django==2.5.5
+    # via -r requirements.dev.in
 pylint-plugin-utils==0.8.2
     # via pylint-django
 pyopenssl==24.1.0
+    # via -r requirements.txt
 pyparsing==3.1.2
-    # via httplib2
+    # via
+    #   -r requirements.txt
+    #   httplib2
 pysocks==1.7.1
     # via urllib3
 pytest==7.4.3
     # via
+    #   -r requirements.dev.in
     #   allure-pytest
     #   pytest-cov
     #   pytest-django
 pytest-cov==4.1.0
+    # via -r requirements.dev.in
 pytest-django==4.7.0
+    # via -r requirements.dev.in
 python-dateutil==2.8.2
     # via
     #   arrow
@@ -450,9 +574,12 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
     # via jupyter-events
 python3-openid==3.2.0
-    # via django-allauth
+    # via
+    #   -r requirements.txt
+    #   django-allauth
 pyyaml==6.0.1
     # via
+    #   -r requirements.txt
     #   huggingface-hub
     #   jupyter-events
     #   langchain
@@ -471,10 +598,12 @@ referencing==0.35.1
     #   jupyter-events
 regex==2024.5.15
     # via
+    #   -r requirements.txt
     #   nltk
     #   tiktoken
 requests==2.31.0
     # via
+    #   -r requirements.txt
     #   coveralls
     #   deep-translator
     #   django-allauth
@@ -487,7 +616,9 @@ requests==2.31.0
     #   requests-oauthlib
     #   tiktoken
 requests-oauthlib==1.3.1
-    # via django-allauth
+    # via
+    #   -r requirements.txt
+    #   django-allauth
 rfc3339-validator==0.1.4
     # via
     #   jsonschema
@@ -501,17 +632,22 @@ rpds-py==0.18.1
     #   jsonschema
     #   referencing
 rsa==4.9
-    # via google-auth
+    # via
+    #   -r requirements.txt
+    #   google-auth
 selenium==4.20.0
+    # via -r requirements.dev.in
 send2trash==1.8.3
     # via jupyter-server
 setuptools==70.2.0
     # via
+    #   -r requirements.txt
     #   fasttext
     #   jupyterlab
     #   nodeenv
 six==1.16.0
     # via
+    #   -r requirements.txt
     #   asttokens
     #   bleach
     #   ebooklib
@@ -520,6 +656,7 @@ six==1.16.0
     #   transliterate
 sniffio==1.3.1
     # via
+    #   -r requirements.txt
     #   anthropic
     #   anyio
     #   httpx
@@ -528,17 +665,23 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
     # via trio
 soupsieve==2.5
-    # via beautifulsoup4
+    # via
+    #   -r requirements.txt
+    #   beautifulsoup4
 sqlalchemy==2.0.31
     # via
+    #   -r requirements.txt
     #   langchain
     #   langchain-community
 sqlparse==0.4.4
-    # via django
+    # via
+    #   -r requirements.txt
+    #   django
 stack-data==0.6.3
     # via ipython
 tenacity==8.4.1
     # via
+    #   -r requirements.txt
     #   langchain
     #   langchain-community
     #   langchain-core
@@ -547,11 +690,14 @@ terminado==0.18.1
     #   jupyter-server
     #   jupyter-server-terminals
 tiktoken==0.7.0
-    # via langchain-openai
+    # via
+    #   -r requirements.txt
+    #   langchain-openai
 tinycss2==1.3.0
     # via nbconvert
 tokenizers==0.19.1
     # via
+    #   -r requirements.txt
     #   anthropic
     #   langchain-mistralai
 tomlkit==0.12.3
@@ -566,6 +712,7 @@ tornado==6.4.1
     #   terminado
 tqdm==4.66.4
     # via
+    #   -r requirements.txt
     #   google-generativeai
     #   huggingface-hub
     #   nltk
@@ -585,6 +732,7 @@ traitlets==5.14.3
     #   nbconvert
     #   nbformat
 transliterate==1.10.2
+    # via -r requirements.txt
 trio==0.25.0
     # via
     #   selenium
@@ -595,6 +743,7 @@ types-python-dateutil==2.9.0.20240316
     # via arrow
 typing-extensions==4.12.2
     # via
+    #   -r requirements.txt
     #   anthropic
     #   google-generativeai
     #   huggingface-hub
@@ -606,13 +755,18 @@ typing-extensions==4.12.2
     #   sqlalchemy
     #   typing-inspect
 typing-inspect==0.9.0
-    # via dataclasses-json
+    # via
+    #   -r requirements.txt
+    #   dataclasses-json
 uri-template==1.3.0
     # via jsonschema
 uritemplate==4.1.1
-    # via google-api-python-client
+    # via
+    #   -r requirements.txt
+    #   google-api-python-client
 urllib3==2.1.0
     # via
+    #   -r requirements.txt
     #   requests
     #   selenium
 virtualenv==20.25.0
@@ -628,7 +782,10 @@ webencodings==0.5.1
 websocket-client==1.8.0
     # via jupyter-server
 werkzeug==3.0.3
+    # via -r requirements.txt
 wsproto==1.2.0
     # via trio-websocket
 yarl==1.9.4
-    # via aiohttp
+    # via
+    #   -r requirements.txt
+    #   aiohttp
