--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
   matrix-build:
     strategy:
       matrix:
-        python-version: ["3.10", 3.11, 3.12]
+        python-version: [3.11, 3.12]
         # Facebook fastText does not support windows-latest
         platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
