https://github.com/andgineer/lexiflux/issues/17 added Mistral, AI captions

--- a/lexiflux/resources/chat_models.yaml
+++ b/lexiflux/resources/chat_models.yaml
@@ -33,7 +33,7 @@ llama3:
 #   model: ChatGoogleGenerativeAI
 #   suffix: 🌀
 
-# mistral-medium:
-#   title: Mistral Medium
-#   model: ChatMistralAI
-#   suffix: 🌪️
+mistral-medium:
+  title: Mistral Medium
+  model: ChatMistralAI
+  suffix: 🌪️
