https://github.com/andgineer/lexiflux/issues/59 if no title / author in metadata - guess from the file name --language - force instead of detected or if not detected

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,4 +1,5 @@
-# This workflow build and push Docker image to docker hub
+# This workflow build and push Docker image to docker hub.
+# And create a release on GitHub.
 # https://docs.docker.com/build/ci/github-actions/cache/
 name: dockerhub
 
