https://github.com/andgineer/lexiflux/issues/60 last read

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -51,6 +51,8 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.snippets:
       base_path: 'docs/includes'
+  - admonition
+
 theme:
   name: material
   features:
