--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
 # Build with Docker, publishing Allure report, coverage report
   primary-build:
     runs-on: ubuntu-latest
+    concurrency:
+      group: github-pages
+      cancel-in-progress: false
 
     steps:
     - uses: actions/checkout@v4
