--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PRIMARY_PYTHON_VERSION  }}
-      - uses: andgineer/uv-venv@main
+      - uses: andgineer/uv-venv@1
       - run: |
           uv pip install pip -r requirements.dev.txt
           pre-commit run --verbose --all-files
