--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ beautifulsoup4==4.12.3
     # via
     #   -r requirements.in
     #   deep-translator
-blis==1.0.2
+blis==0.7.11
     # via thinc
 cached-property==2.0.1
     # via genanki
@@ -114,9 +114,9 @@ google-api-core==2.24.0
     #   google-ai-generativelanguage
     #   google-api-python-client
     #   google-generativeai
-google-api-python-client==2.154.0
+google-api-python-client==2.155.0
     # via google-generativeai
-google-auth==2.36.0
+google-auth==2.37.0
     # via
     #   google-ai-generativelanguage
     #   google-api-core
@@ -204,7 +204,7 @@ langchain-text-splitters==0.3.2
     # via langchain
 langcodes==3.5.0
     # via spacy
-langsmith==0.2.2
+langsmith==0.2.3
     # via
     #   langchain
     #   langchain-community
@@ -238,8 +238,9 @@ mypy-extensions==1.0.0
     # via typing-inspect
 nltk==3.9.1
     # via -r requirements.in
-numpy==2.0.2
+numpy==1.26.4
     # via
+    #   -r requirements.in
     #   blis
     #   fasttext
     #   langchain
@@ -377,7 +378,7 @@ sniffio==1.3.1
     #   openai
 soupsieve==2.6
     # via beautifulsoup4
-spacy==3.8.2
+spacy==3.7.5
     # via -r requirements.in
 spacy-legacy==3.0.12
     # via spacy
@@ -400,7 +401,7 @@ tenacity==9.0.0
     #   langchain
     #   langchain-community
     #   langchain-core
-thinc==8.3.2
+thinc==8.2.5
     # via spacy
 tiktoken==0.8.0
     # via langchain-openai
